feat(backend): implement route to get similar reviews
